--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+0.24
+ - Replace the PerlIO* objects stuff in _TRmpfr_* functions (added in
+   0.23) with FILE* objects  ... so that the module will still build
+   on perl 5.6.
+
 0.23
  - Add TRmpq_out_str and TRmpq_inp_str.
  - Rmpq_out_str now takes an optional (leading) string argument - a
