Import of SISYPHUS/Math-GMPq-0.28 from CPAN.
gitpan-cpan-distribution: Math-GMPq
gitpan-cpan-version:      0.28
gitpan-cpan-path:         SISYPHUS/Math-GMPq-0.28.tar.gz
gitpan-cpan-author:       SISYPHUS
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,18 @@
+0.28
+ Requires gmp-4.2.0 or later.
+ In response to bug http://rt.cpan.org/Ticket/Display.html?id=46499:
+ - Amendment to Makefile.PL wrt 'long long' and 'long double' support.
+ - Remove reliance on $Config{use64bitint} in t/new.t and t/out_str.t
+ - Add some MAC OS X notes to README and fix some typos.
+ 
+ In response to bug http://rt.cpan.org/Ticket/Display.html?id=46604
+ - Fix ___GMP__CC() and ___GMP_CFLAGS() so that they return undef
+   if __GMP_CC and __GMP_CFLAGS are not defined by the gmp library.
+
+ Thanks, Bob Kuo and Jonathan Leto.
+
 0.27
+ - Requires gmp-4.2.3 0r later.
  - Add Rmpq_fprintf, Rmpq_sprintf and Rmpq_sprintf_ret.
  - Change Rmpq_sprintf to return the number of characters written.
  - Add __GNU_MP_VERSION, __GNU_MP_VERSION_MINOR, __GNU_MP_VERSION_PATCHLEVEL,
