Import of SISYPHUS/Math-GMPq-0.35 from CPAN.
gitpan-cpan-distribution: Math-GMPq
gitpan-cpan-version:      0.35
gitpan-cpan-path:         SISYPHUS/Math-GMPq-0.35.tar.gz
gitpan-cpan-author:       SISYPHUS
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+0.35
+ - Add Math::GMPq::V
+ - Add overload_inc and overload_dec functions.
+ - Accommodate cross-class overloaded arithmetic with Math::MPFR.
+
 0.33
  - Remove 'not' from overloads. Apparently achieved nothing anyway, and 5.16
    warns that it's invalid.
