Import of SISYPHUS/Math-GMPq-0.36 from CPAN.
gitpan-cpan-distribution: Math-GMPq
gitpan-cpan-version:      0.36
gitpan-cpan-path:         SISYPHUS/Math-GMPq-0.36.tar.gz
gitpan-cpan-author:       SISYPHUS
gitpan-cpan-maturity:     released

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+0.36
+ - Fix test 3i in new.t. (It wasn't allowing for the case where perl was built
+   with long double support, but ivsize was still 4.
+ - Alter the way that strEQ gets hold of HvNAME(SvSTASH(SvRV(sv))) - so that -Wall
+    doesn't emit "null argument" warnings. (Thanks Daniel Kahn Gillmor.)
+
 0.35
  - Add Math::GMPq::V
  - Add overload_inc and overload_dec functions.
